perfs increase / wip

--- a/src/app/components.dumb/landing/hero/hero.component.html
+++ b/src/app/components.dumb/landing/hero/hero.component.html
@@ -1,7 +1,7 @@
 <div class="container flex flex-col justify-between relative min-w-full min-h-screen">
     <div>
         <video class="absolute  z-10 w-full h-full object-cover" loop autoplay muted
-            src="/assets/videos/coffee_video.mp4"></video>
+            src="/assets/videos/coffee_video.webm"></video>
         <div
             class="absolute h-full w-full z-20 h-screen px-4 sm:px-20 lg:px-44 2xl:px-96 bg-my-black/70 flex gap-4 flex-col justify-center items-center">
             <div class="w-full flex flex-col items-center sm:items-start">
