--- a/src/app/components.dumb/landing/projects/projects.component.html
+++ b/src/app/components.dumb/landing/projects/projects.component.html
@@ -3,7 +3,7 @@
   <div class="flex justify-center items-center">
     <div class="flex flex-wrap justify-center gap-4">
       @for(project of projects; track project){
-      <div class="bg-white group relative shadow-md rounded-lg w-full sm:w-[300px]  h-[400px] 2xl:h-[450px]">
+      <div class="bg-white group relative shadow-md rounded-lg w-full md:w-[280px]  h-[400px]">
         <div class="overflow-hidden rounded-t-lg card-image-container relative h-3/5">
           <img class="duration-200 group-hover:scale-110 rounded-t-lg absolute w-full h-full object-cover"
             src="../../../../assets/images/{{project.image}}" alt="{{project.client}}">
