--- a/src/app/components.dumb/layout/footer/footer.component.html
+++ b/src/app/components.dumb/layout/footer/footer.component.html
@@ -23,10 +23,10 @@
             
         </div>
         <div class="flex flex-wrap justify-center md:justify-end items-center gap-2">
-            <a href="https://www.linkedin.com/in/williamfinzy/" target="_blank" rel="noopener noreferrer">
+            <a aria-label="Mon LinkedIn" href="https://www.linkedin.com/in/williamfinzy/" target="_blank" rel="noopener noreferrer">
                 <i style="font-size: 1.5rem" class="text-my-black pi pi-linkedin mr-2"></i>
             </a>
-            <a href="https://github.com/willfynch" target="_blank" rel="noopener noreferrer">
+            <a aria-label="Mon Github" href="https://github.com/willfynch" target="_blank" rel="noopener noreferrer">
                 <i style="font-size: 1.5rem" class="text-my-black pi pi-github mr-2"></i>
             </a>
         </div>
