--- a/src/app/components.dumb/landing/projects/projects.component.scss
+++ b/src/app/components.dumb/landing/projects/projects.component.scss
@@ -11,11 +11,27 @@
     height: 5px;
 }
 
-.card {
+.project-card {
     border-radius: 0.5rem;
     padding-bottom: 10px;
+    aspect-ratio: 1/1.5;
 }
 
   .description {
     margin: 20px 0;
+  }
+
+  .projects-container {
+    gap: .5rem;
+    display: grid;
+    grid-template-columns: repeat( auto-fit, minmax(300px, 1fr) );
+  }
+  .card-image-container {
+    width: 100%;
+    aspect-ratio: 1/.9;
+  }
+  .project-card-image {
+    
+    
+    object-fit: cover;
   }
