--- a/src/app/components.smart/contact/contact.component.scss
+++ b/src/app/components.smart/contact/contact.component.scss
@@ -10,8 +10,8 @@
     margin-top: 35px;
     height: 5px;
 }
-.loading {
-    background-color: #3b3226;
+.greyed {
+    background-color: #645848;
 }
 
 .mat-mdc-progress-spinner { --mdc-circular-progress-active-indicator-color: #fdf7ec; }
