--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,4 +1,4 @@
-<main class="relative">
+<main class="relative bg-[#FCFCFD] min-h-screen">
   <app-navbar  [navItems]="navItems()"></app-navbar>
   <div class="flex justify-center mt-4">
     <div class="w-[500px]">
