--- a/src/app/components/common/profile-card/profile-card.component.html
+++ b/src/app/components/common/profile-card/profile-card.component.html
@@ -22,9 +22,9 @@
         </button>
     </div>
   </div>
-  @if(page() === "home"){
+  @if(page() === "/home"){
     <div hlmCardContent>
-        <brn-separator hlmSeparator></brn-separator>
+        <brn-separator class="my-4" hlmSeparator></brn-separator>
         <p class="text-sm text-black/50">{{BIO}}</p>
     </div>
     }
