--- a/src/app/pages/about/about.page.html
+++ b/src/app/pages/about/about.page.html
@@ -1,1 +1,9 @@
-<p>about works!</p>
+<app-head-title [page]="'/about'"></app-head-title>
+<app-profile-card [page]="'about'"></app-profile-card>
+<section>
+    <h2>About</h2>
+    <p>{{aboutText}}</p>
+    <h2>Experience</h2>
+    <p>{{aboutText}}</p>
+    <h2>Side projects</h2>
+</section>
