--- a/src/app/pages/home/home.page.html
+++ b/src/app/pages/home/home.page.html
@@ -1,1 +1,2 @@
-<app-profile-card [page]="'home'"></app-profile-card>
+<app-head-title [page]="'/about'"></app-head-title>
+<app-profile-card [page]="'/home'"></app-profile-card>
