--- a/src/app/components/common/head-title/head-title.component.html
+++ b/src/app/components/common/head-title/head-title.component.html
@@ -1,4 +1,4 @@
-<div class="w-full flex justify-center my-6">
+<div class="w-full flex justify-center mt-6 mb-12">
     <div class="h-[54px] w-72 overflow-hidden">
         @if(!isHelloArrayUsed()){
             <h1>{{title()}}</h1>
@@ -7,7 +7,7 @@
         @if(isHelloArrayUsed()){
             <div class="hello-container">
                 @for(hello of hellos; track hello){
-                    <h1 id="hello-title" class="-translate-y-[{{value}}px] h-[54px] duration-300  text-5xl text-center font-semibold text-black/20">{{hello}}</h1>
+                    <h1 [ngStyle]="translatedStyle()" class="h-[54px] duration-700 text-5xl text-center font-semibold text-black/20">{{hello}}</h1>
                 }
             </div>
         }
