--- a/src/app/pages/about/about.page.html
+++ b/src/app/pages/about/about.page.html
@@ -1,9 +1,12 @@
 <app-head-title [page]="'/about'"></app-head-title>
 <app-profile-card [page]="'about'"></app-profile-card>
-<section>
-    <h2>About</h2>
-    <p>{{aboutText}}</p>
-    <h2>Experience</h2>
-    <p>{{aboutText}}</p>
-    <h2>Side projects</h2>
+<section class="article-container">
+    <h2 class="article-h2">About</h2>
+    <p class="article-paragraph">{{aboutText1}}</p>
+    <p class="article-paragraph">{{aboutText2}}</p>
+    <h2 class="article-h2">Experience</h2>
+    @for(experience of experiences; track experience.id){
+        <app-experience-item class="cursor-pointer" hlmBtn size="nolimit" variant="ghost" [experienceItem]="experience"></app-experience-item>
+    }
+    <h2 class="article-h2">Side projects</h2>
 </section>
