--- a/src/styles.css
+++ b/src/styles.css
@@ -1,8 +1,5 @@
 @import "@angular/cdk/overlay-prebuilt.css";
-
 /* You can add global styles to this file, and also import other style files */
-
-@import "primeicons/primeicons.css";
 @import url("https://fonts.googleapis.com/css2?family=Caveat:wght@400..700&display=swap");
 @tailwind base;
 @tailwind components;
@@ -81,10 +78,13 @@ body {
         @apply border-border;
     }
 }
-article {
-    
+
+.article-container {
+    @apply p-6 my-10;
 }
-h2 {
-    font-weight: bold;
-    font-size: 1.1rem;
+.article-paragraph {
+    @apply my-4 text-black/50;
+}
+.article-h2 {
+    @apply font-semibold mt-10 mb-4;
 }
