--- a/src/app/components/about/experience-item/experience-item.component.html
+++ b/src/app/components/about/experience-item/experience-item.component.html
@@ -1,8 +1,8 @@
-<div class="grid grid-cols-12 gap-4 my-4 p-2">
-<div class="col-span-3 text-black/30">{{experienceItem()?.startDate}} - {{experienceItem()?.endDate}}</div>
-<div class="col-span-9 ">
-    <p class="font-bold">{{experienceItem()?.jobTitle}}</p>
-    <p class="text-black/30 mb-4">{{experienceItem()?.company}}</p>
-    <p class="text-sm text-black/50">{{experienceItem()?.description}}</p>
-</div>
+<div class="grid grid-cols-12 gap-4  p-2">
+    <div class="col-span-3 text-black/30">{{experienceItem()?.startDate}} - {{experienceItem()?.endDate}}</div>
+    <div class="col-span-9 ">
+        <p class="font-bold">{{experienceItem()?.jobTitle}}</p>
+        <p class="text-black/30 mb-4">{{experienceItem()?.company}}</p>
+        <p class="text-sm text-black/50">{{experienceItem()?.description}}</p>
+    </div>
 </div>
