--- a/src/app/components/about/side-project-item/side-project-item.component.html
+++ b/src/app/components/about/side-project-item/side-project-item.component.html
@@ -1,1 +1,12 @@
-<p>side-project-item works!</p>
+<a target="_blank" href="{{sideProjectItem()?.link}}" class="w-full h-28 flex gap-4 items-center p-2">
+    <img class="h-20 aspect-video" src="../../../../assets/images/side-projects/{{sideProjectItem()?.imagePath}}" alt="">
+    <div class="w-full h-20 flex flex-col items-start">
+        <div class="w-full flex justify-between gap-4">
+            <h2 class="font-bold">
+                {{sideProjectItem()?.name}}
+            </h2>
+            <ng-icon name="lucideArrowUpRight"></ng-icon>
+        </div>
+        <p class="text-sm text-black/50">{{sideProjectItem()?.description}}</p>
+    </div>
+</a>
