--- a/src/app/components/common/profile-card/profile-card.component.html
+++ b/src/app/components/common/profile-card/profile-card.component.html
@@ -26,6 +26,12 @@
     <div hlmCardContent>
         <brn-separator class="my-4" hlmSeparator></brn-separator>
         <p class="text-sm text-black/50">{{BIO}}</p>
+        <brn-separator class="my-4" hlmSeparator></brn-separator>
+        <div class="block">
+          <a class="my-0 mx-auto" [routerLink]="['/contact']"  hlmBtn variant='secondary'> 
+            <ng-icon class="mr-2" name="lucideCopy"/> 
+            Download resume</a>
+        </div>
     </div>
     }
    
