--- a/src/styles.css
+++ b/src/styles.css
@@ -9,12 +9,10 @@ html {
 }
 
 html,
-body {
-    height: 100%;
-}
+
 body {
     margin: 0;
-    font-family: "Inter-Medium", "Inter", sans-serif;
+    font-family: "Inter", sans-serif;
     /**font-family: Roboto, "Helvetica Neue", sans-serif;**/
 }
 * {
@@ -80,11 +78,11 @@ body {
 }
 
 .article-container {
-    @apply p-6 my-10;
+    @apply p-6 ;
 }
 .article-paragraph {
     @apply my-4 text-black/50;
 }
 .article-h2 {
-    @apply font-semibold mt-10 mb-4;
+    @apply font-medium mt-10 mb-4;
 }
