--- a/src/app/components/common/head-title/head-title.component.html
+++ b/src/app/components/common/head-title/head-title.component.html
@@ -1,7 +1,7 @@
 <div class="w-full flex justify-center mt-6 mb-12">
-    <div class="h-[54px] w-72 overflow-hidden">
+    <div class="h-[54px] w-80 overflow-hidden">
         @if(!isHelloArrayUsed()){
-            <h1>{{title()}}</h1>
+            <h1 class="h-[54px] duration-700 text-5xl text-center font-semibold text-black/20">{{title()}}</h1>
         }
         
         @if(isHelloArrayUsed()){
