--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,3 +1,4 @@
+
 <main class="relative bg-[#FCFCFD] min-h-screen">
   <app-navbar  [navItems]="navItems()"></app-navbar>
   <div class="flex justify-center mt-4">
@@ -5,4 +6,5 @@
       <router-outlet></router-outlet>
     </div>
   </div>
+  <app-footer></app-footer>
 </main>
