--- a/src/app/components/layout/footer/footer.component.html
+++ b/src/app/components/layout/footer/footer.component.html
@@ -1,4 +1,4 @@
 
 <footer class="bg-[#FCFCFD] flex flex-col items-center justify-between py-12">
-   <small class="text-primary/50 font-bold">Copyright {{currentDate}}</small>
+   <small class="text-primary/50 ">Copyright {{currentDate}}</small>
 </footer>
