--- a/src/app/pages/contact/contact.page.html
+++ b/src/app/pages/contact/contact.page.html
@@ -1,3 +1,3 @@
 <app-head-title [page]="'/contact'"></app-head-title>
 <app-contact-buttons [socialLinks]="socialLinks"></app-contact-buttons>
-<app-contact-form (onSendMessage)="sendMessage()" [contactForm]="contactForm"></app-contact-form>
+<app-contact-form [emailAlertStatus]="emailAlertStatus()" (onSendMessage)="sendMessage()" [contactForm]="contactForm"></app-contact-form>
