Test with bigger font

--- a/src/app/components/common/profile-card/profile-card.component.html
+++ b/src/app/components/common/profile-card/profile-card.component.html
@@ -40,6 +40,7 @@
         <brn-separator class="mt-2 mb-4" hlmSeparator></brn-separator>
         <div class="flex justify-center flex-wrap gap-2">
             <a
+            class="w-full md:w-fit"
                 target="_blank"
                 href="../../../../assets/pdfs/cv_william_finzy_developpeur_angular_react.pdf"
                 hlmBtn
@@ -47,7 +48,7 @@
                 <ng-icon class="mr-2" name="lucideDownload" />
                 Download resume
             </a>
-            <a class="group" target="_blank" href="https://www.linkedin.com/in/williamfinzy/" hlmBtn variant="blueBtn">
+            <a class="group w-full md:w-fit" target="_blank" href="https://www.linkedin.com/in/williamfinzy/" hlmBtn variant="blueBtn">
                 <span class="mr-2 group-hover:translate-x-1 duration-300">👉</span> Add me on LinkedIn
             </a>
         </div>
