--- a/src/app/pages/about/experience-item/experience-item.component.html
+++ b/src/app/pages/about/experience-item/experience-item.component.html
@@ -1,13 +1,13 @@
-<a [routerLink]="experienceItem().slug" class="grid grid-cols-12 text-sm">
-    <div class="col-span-3 text-black/30">
+<a [routerLink]="experienceItem().slug" class="md:grid md:grid-cols-12 ">
+    <div class="col-span-3 text-primary/80">
         {{ experienceItem().startDate }} - {{ experienceItem().endDate }}
     </div>
     <div class="col-span-9">
         <div class="w-full flex justify-between gap-4">
-            <h3>{{ experienceItem().jobTitle }}</h3>
+            <h3 class="font-bold text-primary">{{ experienceItem().jobTitle }}</h3>
             <ng-icon name="lucideArrowUpRight"></ng-icon>
         </div>
-        <p class="text-black/30 mb-4">{{ experienceItem().company }}</p>
+        <p class="text-primary/80 mb-4">{{ experienceItem().company }}</p>
         <span class="text-primary">{{ experienceItem().description }}</span>
     </div>
 </a>
