--- a/src/app/pages/about/side-project-item/side-project-item.component.html
+++ b/src/app/pages/about/side-project-item/side-project-item.component.html
@@ -1,11 +1,11 @@
-<a target="_blank" [href]="sideProjectItem().link" class="text-sm w-full h-28 flex gap-4 items-center p-2">
+<a target="_blank" [href]="sideProjectItem().link" class="group w-full flex-col md:flex-row flex gap-4 items-center p-2">
     <img
-        class="h-20 aspect-video"
+        class="h-20 aspect-video hidden md:block"
         src="../../../../assets/images/side-projects/{{ sideProjectItem().imagePath }}"
         alt="" />
-    <div class="w-full h-20 flex flex-col items-start">
+    <div class="w-full flex flex-col items-start">
         <div class="w-full flex justify-between gap-4">
-            <h2 class="font-medium">
+            <h2 class="font-bold text-primary">
                 {{ sideProjectItem().name }}
             </h2>
             <ng-icon name="lucideArrowUpRight"></ng-icon>
