--- a/src/app/pages/about/about.page.scss
+++ b/src/app/pages/about/about.page.scss
@@ -47,7 +47,7 @@
     position: relative;
     justify-content: space-around;
     animation: marquee 30s linear infinite;
-    min-width: 800px;
+    //min-width: 800px;
 }
 
 .slider-list > * {
