--- a/src/app/pages/about/side-project-item/side-project-item.component.html
+++ b/src/app/pages/about/side-project-item/side-project-item.component.html
@@ -5,11 +5,11 @@
         alt="" />
     <div class="w-full flex flex-col items-start">
         <div class="w-full flex justify-between gap-4">
-            <h2 class="font-bold text-primary">
+            <h2 class="font-bold text-primary group-hover:text-accent-blue">
                 {{ sideProjectItem().name }}
             </h2>
             <ng-icon name="lucideArrowUpRight"></ng-icon>
         </div>
-        <p class="text-black/50">{{ sideProjectItem().description }}</p>
+        <p class="text-primary">{{ sideProjectItem().description }}</p>
     </div>
 </a>
