--- a/src/app/pages/contact/contact-form/contact-form.component.html
+++ b/src/app/pages/contact/contact-form/contact-form.component.html
@@ -1,5 +1,5 @@
-<h2 class="article-h2">Send me a message</h2>
-<div hlmCard class="p-4">
+<h2 class="article-h2">📩 Send me a message</h2>
+<div hlmCard class="p-0 md:p-4">
     <form class="py-4 py-8 flex flex-col justify-center gap-2" [formGroup]="contactForm()" hlmCardContent>
         <hlm-form-field>
             <input
